--- a/tos.html
+++ b/tos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Arradaza Academy - Terms of Service</title>
+  <title>Terms of Service | Arradaza Academy</title>
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
   <style>
@@ -58,75 +58,11 @@
 </head>
 <body>
 
-  <h1>Terms of Service – Arradaza Academy Online Portal</h1>
+  <h1>Terms of Service – Arradaza Academy</h1>
 
   <div class="article">
-    <h2>Article 1: Establishment of Portal Use</h2>
-    <p>This document shall be known as the <strong>Terms of Use of the Arradaza Academy Online Educational Portal</strong>. It governs access to and use of the portal by individuals granted login credentials.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 2: Purpose and Application</h2>
-    <p>The Portal exists to deliver educational content, facilitate academic interaction, and support the learning journey of students at Arradaza Academy. These terms apply to students, teachers, staff, and authorized guardians.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 3: Registration and User Identity</h2>
-    <ul>
-      <li>Users must provide accurate personal information.</li>
-      <li>Impersonation or false data is prohibited.</li>
-      <li>Each user is granted one personal account, not to be shared or transferred.</li>
-    </ul>
-  </div>
-
-  <div class="article">
-    <h2>Article 4: Duties of Portal Users</h2>
-    <ul>
-      <li>Use the portal for academic purposes only.</li>
-      <li>Maintain the confidentiality of credentials.</li>
-      <li>Follow official schedules and instructions.</li>
-      <li>Report security issues or misuse.</li>
-    </ul>
-  </div>
-
-  <div class="article">
-    <h2>Article 5: Prohibited Conduct</h2>
-    <ul>
-      <li>Uploading viruses or harmful content.</li>
-      <li>Accessing other users' accounts or data.</li>
-      <li>Engaging in harassment, spam, or academic dishonesty.</li>
-    </ul>
-    <p>Violations may result in suspension, disciplinary action, or legal reporting.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 6: Privacy and Data Protection</h2>
-    <p>The Academy collects only essential data. All data is protected under the Privacy Policy. Data will not be shared externally without legal basis or user consent.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 7: Platform Availability and Limitations</h2>
-    <p>The platform may experience downtime due to maintenance or issues beyond control. Users are responsible for internet access and compatible devices.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 8: Academic Integrity</h2>
-    <p>Plagiarism, cheating, and falsifying records are strictly prohibited and subject to sanctions as outlined in the Student Handbook.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 9: Intellectual Property</h2>
-    <p>Content on the Portal is the property of Arradaza Academy. Users may not copy or redistribute material without written permission.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 10: Amendment and Enforcement</h2>
-    <p>These Terms may be updated without prior notice. Continued use signifies acceptance of updates. Violators may face penalties or account termination.</p>
-  </div>
-
-  <div class="article">
-    <h2>Article 11: Acknowledgment</h2>
-    <p>By logging in or registering, you confirm that you understand and accept these Terms.</p>
+    <h2>Work in Progress</h2>
+    <p>This document will be filled once the core functions of the website are done.</p>
   </div>
 
   <a href="index.html" class="back-button">← Back to Home</a>
