--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
     <input type="password" id="password" placeholder="Password" required />
     <button onclick="login()">Login</button>
     <a href='/register'>Don’t have an account? Register</a>
-    <a class="back" href="../tos.html">Terms of Service</a> <p>•</p> <a class="back" href="../privacy.html">Privacy</a>
+    <a class="back" href="../tos.html">Terms of Service</a> • <a class="back" href="../privacy.html">Privacy</a>
   </div>
 
   <script type="module">
