--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
     <input type="password" id="password" placeholder="Password" required />
     <button onclick="register()">Register</button>
     <a href='/login'>Already have an account? Login</a>
-    <a class="back" href="../tos.html">Terms of Service</a> <p>•</p> <a class="back" href="../privacy.html">Privacy</a>
+    <a class="back" href="../tos.html">Terms of Service</a> • <a class="back" href="../privacy.html">Privacy</a>
   </div>
 
   <script type="module">
