--- a/register.html
+++ b/register.html
@@ -66,7 +66,10 @@
     <input type="password" id="password" placeholder="Password" required />
     <button onclick="register()">Register</button>
     <a href='/login'>Already have an account? Login</a>
-    <a class="back" href="../tos.html">Terms of Service</a> • <a class="back" href="../privacy.html">Privacy</a>
+    <p style="text-align: center;">
+        <a class="back" href="../tos.html">Terms of Service</a> • 
+        <a class="back" href="../privacy.html">Privacy</a>
+    </p>
   </div>
 
   <script type="module">
